# spotMicro-Chinese

./: README.md
3D模型及打印文件/李必昂定制201026-3D打印/李必昂定制201026-3D打印-腿/李必昂定制201026-3D打印-右前腿/: 李必昂定制201026-3D打印_右前腿护肩.stl
3D模型及打印文件/李必昂定制201026-3D打印/李必昂定制201026-3D打印-腿/李必昂定制201026-3D打印-右后腿/: 李必昂定制201026-3D打印_右后腿股关节.stl
3D模型及打印文件/李必昂定制201026-3D打印/李必昂定制201026-3D打印-腿/李必昂定制201026-3D打印-左前腿/: 李必昂定制201026-3D打印_左前腿大腿外侧.stl  李必昂定制201026-3D打印_左前腿护肩.stl
3D模型及打印文件/李必昂定制201026-模型/李必昂定制201026-模型-外壳/: 李必昂定制201026-模型_下壳.stl
3D模型及打印文件/李必昂定制201026-模型/李必昂定制201026-模型-头/: 李必昂定制201026-模型_头骨架（前）.stl
3D模型及打印文件/李必昂定制201026-模型/李必昂定制201026-模型-屁股/: 李必昂定制201026-模型_屁股骨架（前）.stl  李必昂定制201026-模型_屁股骨架（后）.stl
3D模型及打印文件/李必昂定制201026-模型/李必昂定制201026-模型-腿/李必昂定制201026-模型-右前腿/: 李必昂定制201026-模型_右前腿大腿内侧.stl  李必昂定制201026-模型_右前腿小腿.stl  李必昂定制201026-模型_右前腿股关节.stl
3D模型及打印文件/李必昂定制201026-模型/李必昂定制201026-模型-腿/李必昂定制201026-模型-右后腿/: 李必昂定制201026-模型_右后腿大腿内侧.stl  李必昂定制201026-模型_右后腿大腿外侧.stl  李必昂定制201026-模型_右后腿小腿.stl
3D模型及打印文件/李必昂定制201026-模型/李必昂定制201026-模型-腿/李必昂定制201026-模型-左前腿/: 李必昂定制201026-模型_左前腿小腿.stl
3D模型及打印文件/李必昂定制201026-模型/李必昂定制201026-模型-腿/李必昂定制201026-模型-左后腿/: 李必昂定制201026-模型_左后腿大腿内侧.stl
spot_micro_motion_cmd/libs/spot_micro_kinematics_cpp/: .gitignore
spot_micro_motion_cmd/libs/spot_micro_kinematics_cpp/src/: spot_micro_kinematics.cpp  utils.cpp  (+1 more)
spot_micro_plot/scripts/spot_micro_kinematics_python/: README.md
硬件部分/: README.md
软件部分/: README.md
软件部分/spot_micro_motion_cmd/libs/spot_micro_kinematics_cpp/: .ycm_extra_conf.py  CMakeLists.txt  README.md
软件部分/spot_micro_motion_cmd/libs/spot_micro_kinematics_cpp/include/spot_micro_kinematics/: spot_micro_leg.h
(+28 files in other folders)
